--- a/day005.md
+++ b/day005.md
@@ -3,6 +3,12 @@
 # ■ Github   
 ### 12. 깃허브 협업 
 > 복습문제로 정리
+> 실습
+- Q1. 금일정리파일 day005.md github에 올리기 
+- Q2. github [클라우드]에서 day005.md 수정
+- Q3. git [로컬]에서 day005.md 클라우드와 수정한 다른부분 수정후 올리기
+- Q4. Q3 발생하는 오류 수정
+- Q5.
 
  
 
