--- a/day005.md
+++ b/day005.md
@@ -15,6 +15,7 @@
 ## 📚 day004 복습  
 ■ WebBasic 주관식 빈칸 채우기 문제
 1. HTML 태그 관련
+3. 잘못된 태그
 1-1. 웹페이지의 구성요소를 알려주는 표시 언어는 (① HTML)이다.  
 1-2. 제목 태그 중 로고나 상호명을 나타낼 때 사용하는 태그는 (② h1)이다.
 1-3. 일반 문단을 작성할 때 사용하는 태그는 (③ p)이고, 줄바꿈과 공백을 유지하는 서식 텍스트는 (④ pre)이다.
