프로필사진만들기

--- a/day005.md
+++ b/day005.md
@@ -7,12 +7,32 @@
 - Q1. 금일정리파일 day005.md github에 올리기 
 - Q2. github [클라우드]에서 day005.md 수정
 - Q3. git [로컬]에서 day005.md 클라우드와 수정한 다른부분 수정후 올리기
-- Q4. Q3 발생하는 오류 수정
+- Q4. Q3 발생하는 오류 수정 - 트러블슈팅
+
+1. 발생문제 : 로컬 master 와 원격 (origin/master) 차이 발생
+2. 해결방안 : 
 
 
+```bash
+git add . 
+git commit -m "현재상태저장"
+git pull origin master
+git push origin master
+```
 
+```bash
+git pull origin master --rebase
+```
+-- rebase 로컬변경사항을 원격변경사항위에 덮기
 
+```bash
+git diff
+q 빠져나오기
+```
 
+```bash
+git statue
+```
  
 
 ## 📚 day004 복습  
@@ -118,6 +138,7 @@
    2. 선 : border:3px solid red
    3. 둥근모서리 : borer-radius : 20px
    4. 그림자효과 : box-shadow: 0 4px 12px rgba(0,0,0,0.5)
+
 
 
 
