--- a/day/day005.md
+++ b/day/day005.md
@@ -145,6 +145,24 @@ git statue
 # ■ Java
  
 #### ■9. 자료형
- 
+1) 자료형의 구분
+- 기본형 : 실제값 저장
+- 참조형 : 주소값 저장 ( String )
+
+2) 기본 자료형
+- 논리형 - boolean true/false
+- 정수형 - byte(1byte) -short(2byte) -int(4byte) ★ -long(8byte)
+               long 1 = 4L;
+- 실수형 - float(4byte) - double(8byte)
+      float f = 3.14f  double d = 3.14
+
+*** ★ 자바 기본 처리단위 ***
+*** ★ 실수는 정수보다 크다 ***
+long(8byte)  < float(4byte) 소수점 포함한 실수표현 
+큰 물통(정수)    고압탱크(압축해서 엄청난 물 담기 - 실수+지수)
+
+- 이번주 숙제
+> track002 web basic [README.md]
+> track003 java      [README.md]
 
 
