--- a/day/day006.md
+++ b/day/day006.md
@@ -334,3 +334,96 @@ public class DataTypeEx002 {
     }
 }
 ```
+## Day 007
+
+복습문제1)
+<div class="card jack"></div>
+
+내부적용방법으로 다음을 작성하시오.
+Q1. .card 너비 : 250px, 여백 : 아래쪽 30px 중앙정렬, 테두리 둥글게 : 20px, 그림자효과, 중앙정렬, 안쪽여백 : 20px,  
+Q2. .jack 배경 : 그라디언트 #dbeafe → #f0f9ff 
+
+
+복습문제2)
+패키지명 : com.company.java002_ex
+클래스명 : InputEx2002
+주어진조건 : 
+   //변수
+   int kor, eng, mat, total;
+   double avg;
+   Scanner scanner = new Scanner(System.in);
+
+출력내용 :  Scanner이용해서  성적처리를 입력받고 출력하시오.
+   국어점수를 입력하시오. 100
+   영어점수를 입력하시오. 100
+   수학점수를 입력하시오. 99
+   총점 : 299
+   평균 : 99.66666666666667
+
+
+■ 복습문제 -답안
+복습문제1)
+<div class="card jack"></div>
+
+내부적용방법으로 다음을 작성하시오.
+Q1. .card 너비 : 250px, 여백 : 아래쪽 30px 중앙정렬, 테두리 둥글게 : 20px, 그림자효과, 중앙정렬, 안쪽여백 : 20px 
+Q2. .jack 배경 : 그라디언트 #dbeafe → #f0f9ff 
+```
+<style>
+
+.card {  width:250px; margin:30px  auto; border-radius:20px;
+       box-shadow: 0 0 10px rgba(0,0,0, 0.1);  text-align: center;  padding:20px;  }
+.jack{  background-image: linear-gradient(135deg, #dbeafe , #f0f9ff);}
+</style>
+```
+
+
+
+
+
+
+복습문제2)
+패키지명 : com.company.java002_ex
+클래스명 : InputEx2002
+주어진조건 : 
+   //변수
+   int kor, eng, mat, total;
+   double avg;
+   Scanner scanner = new Scanner(System.in);
+
+출력내용 :  Scanner이용해서  성적처리를 입력받고 출력하시오.
+   국어점수를 입력하시오. 100
+   영어점수를 입력하시오. 100
+   수학점수를 입력하시오. 99
+   총점 : 299
+   평균 : 99.66666666666667
+
+
+```java
+package com.company.java002_ex;
+
+import java.util.Scanner;
+
+public class InputEx2002 {
+   public static void main(String[] args) {
+      //변수
+      int kor, eng, mat, total;
+      double avg;
+      Scanner scanner = new Scanner(System.in);
+      //입력
+      System.out.print("국어점수를 입력하시오. "); 
+      kor = scanner.nextInt();
+      System.out.print("영어점수를 입력하시오. "); 
+      eng = scanner.nextInt();
+      System.out.print("수학점수를 입력하시오. "); 
+      mat = scanner.nextInt();
+      //처리
+      total = kor + eng + mat;   // A=B
+      avg   = total/3.0;   //정수 = 정수/정수  →  실수 = 정수/실수
+      //출력
+      System.out.println("총점 : " + total);
+      System.out.println("평균 : " + avg); 
+   }
+}
+ 
+```
