--- a/day/day009.md
+++ b/day/day009.md
@@ -24,4 +24,37 @@
     - 요소의 속성바꾸기
 
 
+
 ## ■ Java 
+
+
+1. 1형식 
+    System.out.println(" ■ 1형식 - 조건을 무조건 읽음 ");
+		int num = 0;
+        num 이(가) 1이라면 1이라면 one , 2이라면 two , 3이라면 three
+        //if (num 가 1이라면 {one})
+        //if (num 가 2이라면 {two})
+        //if (num 가 3이라면 {three})
+        if( num == 1) {System.out.println("one");  }
+        if( num == 2) {System.out.println("two");  } // 1에서 이미 충족이 되어 조건을 처리했는지 알수없음
+        if( num == 3) {System.out.println("three");  } // 1에서 이미 충족이 되어 조건을 처리했는지 알수없음
+
+2. 2형식
+    System.out.println(" ■ 2형식 - 맞다/틀리다 ");
+		num = 0;
+		if( num==1) {System.out.println("one");  }
+		else {       System.out.println("one이(가) 아니다"); }
+
+3.  다형식
+    System.out.println(" ■ 다형식 ");
+		num=0;
+			 if( axe == 1) {System.out.println("one"); }
+		else if( axe == 2) {System.out.println("two"); }
+		else if( axe == 3) {System.out.println("three"); }
+		else {              System.out.println("1,2,3의 숫자가 입력되지않았습니다.");}
+
+4. 문자를 입력 받을경우
+    
+    변수 char 을 사용하며 (char ch='\u0000';)
+    입력을 받을때 스캐너를 사용하며, next().charAt(0)을 사용한다.
+
