--- a/day/day009.md
+++ b/day/day009.md
@@ -27,6 +27,25 @@
 
 ## ■ Java 
 
+    ## 5. 대입연산자
+        a=10; b=3;
+        System.out.println("1: " +    (a+=b) );  //1)a+b 2_ a=13     a+=b   a+b=a
+        System.out.println("2: " +    (a-=b) );  //1)a+b 2_ a=13     a-=b   a-b=a
+        
+    ## 6. 단항 
+    
+       // 함수 있는곳 먼저  al = 1 , ; al >> ++(증가) >> preintln  >> 2
+       //                 al = 1 , ++(증가) >> al >> println >> 1 다음에 사용시 은 2의를 갖게됨
+        int a1 = 1, b1=1, c1=1, d1=1;
+        System.out.println(++a1); //2 증가출력
+        System.out.println( a1); //2 출력
+        System.out.println(b1++); //1 출력증가
+        System.out.println(b1); //2
+        
+        System.out.println(--c1); //0 감소출력
+        System.out.println(c1); //0 
+        System.out.println(d1--);//1 출력감소
+        System.out.println(d1); //0
 
 1. 1형식 
     System.out.println(" ■ 1형식 - 조건을 무조건 읽음 ");
