--- a/day/day010.md
+++ b/day/day010.md
@@ -1,23 +1,101 @@
-1. # Java
-연습문제 5.
-	
-
-//변수
-char result;
-char ch='\u0000';
-
-//입력		
-System.out.println("문자를 입력해주세여");
-ch = scanner.next().charAt(0);
-			
-            -result = (char)(ch = 유니코드+32)
-//출력		
-if		(ch >= 'A' && ch <= 'Z') {result = (char)(ch + 32); System.out.println("소문자로 변환: " + result);}
-else if (ch >= 'a' && ch <= 'z') {result = (char)(ch - 32); System.out.println("대문자로 변환: " + result);}
-else {System.out.println("영문자가 아닙니다.");}
+## Track001 -  github
 
 
-## 연습문제5)
+# ■ Github   
+### 12. 깃허브 협업 
+ 
+---
+1조 : 유희재, 한승현, 김정민, 강서현
+2조 : 성태훈, 길상현, 박현주, 임경민
+3조 : 최상욱, 김영민, 신준용
+3i1e         : https://github.com/kyoungsjjj0211/portfolio.git
+드래곤치킨     : https://github.com/taehun00/dragonchicken.git
+트리플윈      : https://github.com/suda77881/triple1
+
+
+# ■ WebBasic
+## 6 배치요소
+
+
+■1. Web  Basic  복습문제
+■1. Web  Basic  복습문제
+■1. Web  Basic  복습문제
+■1. Web  Basic  복습문제
+
+### 1. block vs inline
+1) box model  
+- 콘텐츠가 자리하는 영역을 의미하며, 박스의 구성 요소는 
+   content(내용)  ,  padding , border , margin 로 이루어진다.
+
+2) block 요소  
+- width/height 설정이 (O/X): O  
+- 앞뒤 줄바꿈이 (O/X): O  
+- 대표 태그: div , p , h3
+
+3) inline 요소  
+- width/height 설정이 (O/X): X  
+- 앞뒤 줄바꿈이 (O/X): X  
+- 대표 태그: a, strong , span
+
+
+### 2. 배치(1) - float
+- 요소를 좌우로 배치할 때 사용하는 속성은  float 이다.  
+- 다음 요소의 흐름을 정리하려면 clear속성을 사용한다.  
+- float를 끊는 대표적인 방법은 클래스명으로  .clear 를 사용한다.
+.clear{  clear:both ; }
+
+### 3. 배치(2) - position
+- 자식 요소를 부모 기준으로 위치시키려면 부모에  relative , 자식에 absolute를 설정한다.  
+- 브라우저 전체 기준으로 고정하려면 fixed 속성을 사용한다.  
+- position의 주요 값 4가지는  relative , absolute , fixed , static 이다.
+
+
+### 4. 배치(3) - display
+
+- 요소의 기본 속성을 바꾸려면 display 속성을 사용한다.  
+- block 요소를 inline처럼 보이게 하려면 inline,  
+  inline 요소를 block처럼 보이게 하려면 block 값을 사용한다.
+
+
+
+
+
+# ■ Java
+
+■ 복습문제
+■1. Java  복습문제
+■1. Java  복습문제
+■1. Java  복습문제
+
+복습문제1) 
+1. 자바의 자료형은 ( 기본형 / 참조형 )
+2. 자바 기본형의 분류는 - boolean ,  ( 정수형 )  , ( 실수형 )
+3. 정수형의 종류는( byte   , short    ,  int  ★    , long   )    
+4. 실수형의 종류는( float   , double   ★  )    
+
+복습문제2)   다음에 해당하는 클래스의 조건을 출력하시오. 
+q1-1 int형 변수 x가 3보다 크고 10보다 작을때 true인 조건식 
+    if(  x>3  && x<10  )
+q1-2 char형 변수 ch가 'a' 또는 'A'일때   true인 조건식    
+    if(  ch == 'a' ||  ch == 'A' )
+q1-3 char형 변수 ch가 숫자('0'~'9')일때   true인 조건식   
+    if(  ch >= '0' && ch <='9'  )  
+q1-4 char형 변수 ch가 영문자(대문자 또는 소문자) 일때   true인 조건식   
+    if(  ch >= 'A' && ch <='Z'   ||
+         ch >= 'a' && ch <='z'    )  
+()   값( ++ , -- , + , - )  비교(>,<, == ) 조건(&& ||)   대입(=)
+
+
+복습문제3) eclipse
+클래스명 :  Repeat010
+출력내용 : 숫자한개를 입력받아 
+   만약 1을 입력했다면   one ,   
+   만약 2을 입력했다면   two ,
+   만약 3을 입력했다면   three ,
+   1,2,3이 아니라면  1,2,3이 아니다를 출력하는 프로그램을 작성하시오.
+
+
+연습문제5)
 패키지명 : com.company.java004_ex
 클래스명 :  IfEx005
 출력내용 : 문자한개를 입력받아 
@@ -25,7 +103,7 @@ else {System.out.println("영문자가 아닙니다.");}
    ※  a = 'A' + 32    
    
 
-## 연습문제6)
+연습문제6)
 패키지명 : com.company.java004_ex
 클래스명 :  IfEx006
 출력내용 : 숫자를입력을받아
@@ -33,7 +111,7 @@ else {System.out.println("영문자가 아닙니다.");}
    ※  num%2==0  짝수
 
 
-## 연습문제7)   
+연습문제7)   
 패키지명 : com.company.java004_ex
 클래스명 :  IfEx007
 출력내용 :  계산기
@@ -49,7 +127,7 @@ else {System.out.println("영문자가 아닙니다.");}
 10-3=7 
 
 
-## 연습문제8)  
+연습문제8)  
 패키지명 : com.company.java004_ex
 클래스명 :  IfEx008
 출력내용 :  성적처리 프로그램입니다.
@@ -68,3 +146,91 @@ else {System.out.println("영문자가 아닙니다.");}
 학번   국어   영어   수학   총점   평균   합격여부   레벨   장학생
 =================================================================================== 
 std111   100   100   99   299   99.67   합격   수   장학생
+ 
+
+>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+
+■ 복습문제 (1)
+1. 자바 우선순위를 적으시오.
+
+
+■ 복습문제 (2)
+2. 다음코드에서 오류나는 부분을 찾아 해결하시오.
+char ch = 'A';
+ch = ch+32;
+
+
+■ 복습문제 (3)
+3. 다음 조건식을 작성하시오.
+char형 변수 ch가 영문자(대문자 또는 소문자) 일때   true인 조건식    
+
+■ 복습문제 (4)  eclipse
+클래스명 :  Repeat011
+출력내용 :  계산기
+
+1. 정수를 하나 입력해주세요 > 10
+2. 정수를 하나 입력해주세요 > 3
+3. 연산자를 입력해주세요(+,-,*,/) > +
+10+3=13 
+
+
+>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+
+■ 복습문제 (1)
+1. 자바 우선순위를 적으시오.
+()   값( ++ , -- , + , - )  비교(>,<, == ) 조건(&& ||)   대입(=)
+
+■ 복습문제 (2)
+2. 다음코드에서 오류나는 부분을 찾아 해결하시오.
+char ch = 'A';
+ch = ch+32;
+
+> 해결
+ch = (char) ch+32;
+
+■ 복습문제 (3)
+3. 다음 조건식을 작성하시오.
+char형 변수 ch가 영문자(대문자 또는 소문자) 일때   true인 조건식   
+if(  ch >= 'A' && ch <='Z'   ||  ch >= 'a' && ch <='z'    )  
+
+■ 복습문제 (4)  eclipse
+클래스명 :  Repeat011
+출력내용 :  계산기
+
+1. 정수를 하나 입력해주세요 > 10
+2. 정수를 하나 입력해주세요 > 3
+3. 연산자를 입력해주세요(+,-,*,/) > +
+10+3=13 
+
+```
+package com.company.java004_ex;
+import java.util.Scanner;
+
+public class IfEx007_1 {
+	public static void main(String[] args) {
+		//변수
+		int num1, num2; String result ="";
+		char op;
+		Scanner scanner = new Scanner(System.in);
+		//입력
+		System.out.print("1. 정수를 하나 입력해주세요 >");
+		num1 = scanner.nextInt();
+		System.out.print("2. 정수를 하나 입력해주세요 >");
+		num2 = scanner.nextInt();
+		System.out.print("3. 연산자를 입력해주세요(+,-,*,/) >");
+		op = scanner.next().charAt(0);
+		//처리    출력  숫자   연산자  숫자    = 
+		
+		result = "" + num1 + op + num2 + "=";  
+ 
+		if(op == '+') {  result += (num1+num2);  }
+		else if(op == '-') {  result += (num1-num2);  }
+		else if(op == '*') {  result += (num1*num2);  }
+		else if(op == '/') {  result += String.format("%.2f"  , (double)num1/num2);  }
+		 
+		     
+		//출력
+		System.out.println(result);
+	}
+}
+```
