--- a/day/day020.md
+++ b/day/day020.md
@@ -24,6 +24,14 @@ web -css 자기소개 페이지
 포트폴리오 GitHub에 올리고 주소 전달하기
 http://127.0.0.1:5500/jeongmin001/track002_web_basic/web006_4_css.html
 
+2025.09.19
+
+1. 깃허브에 docs폴더 만들기. /docs/index.html
+2. 레파지토리 Settings 에 가서 page설정
+3. docs에 index.html파일 올리기
+
+
+
 - Html BOOTSTRAP
 다른사람들이 만든 스타일을 가져와서 사용할수 있는 사이트, link, script를 사용하여 스타일 및, div 요소들을 가져온다.
 - Java arr [] 
