--- a/day/day020.md
+++ b/day/day020.md
@@ -30,6 +30,8 @@ http://127.0.0.1:5500/jeongmin001/track002_web_basic/web006_4_css.html
 2. 레파지토리 Settings 에 가서 page설정
 3. docs에 index.html파일 올리기
 4. 자기소개페이지 [5분]
+
+kyoungsjjj0211/jeongmin001
 https://kyoungsjjj0211.github.io/jeongmin001/
 5. Contact me
 https://www.emailjs.com/
