--- a/day/day021.md
+++ b/day/day021.md
@@ -38,7 +38,51 @@ https://www.emailjs.com/
 
 2025.09.20
 # ■ Java
+● 1. class?
+1. 자바의 저장단위
+- 변수 < 배열 < 클래스 (변수,배열+메서드) 
+2. 클래스 (class)
+- 부품객체
+- 설계도 (레고설계도)
+- 상태(멤버변수)와 행위(멤버함수)를 갖는다.
 
+3. ★ oop
+- Object Oriented Programming
+-  객체     지향     프로그래밍
+-   틀      기반     프로그래밍
+  부품객체(클래스) 조립 완성된 프로그램 만드는 기법
+
+4. 클래스와 객체들(각각 인스턴스)
+- 1. 클래스 (설계도)로 예 )붕어빵[틀], 레고 설계도
+- 2. 인스턴스화를 통해 ( new 실제 메모리 - heap에 객체 만들기) 예) 만들기, 조립
+- 3.       객체(object)   예) 붕어빵[틀] / 우주탐사레고 레고장난감들
+- 4.          인스턴스      예) 팥붕어빵, 슈크림 붕어빵 각각 / ㅂ;행선 장난감, 여행객...
+
+> 클래스는 설계도
+> 인스턴스는 실제로 만들어진 객체
+
+
+● 2. 생성자
+1. 생성자
+  - new 연산자에 의해 호출 [초기화] 담당
+
+2. 기본생성자 (디폴트 생성자) 
+ - 모든클래스에 생성자가 반드시 존재
+ - 생성자 선언을 생량하면 컴파일러가 자동으로 기본생산자 추가
+ - 개발자가 선언시 컴파일러가 자동생성을 취소
+
+3. 생성자형식
+class A{
+  public A(){}   //기본생성자
+  public A(String name){} // 파라미터, 알규머트가 있는 생성자
+}
+
+1) 리턴값 없음
+2) 클래스명과 동일
+3) 디폴트생성자를 생성해야하는 경우 : 오버로딩, 상속
+
+4. 초기화 순서
+기본값    명시적초기화    초기화블록     생성자
 
 # ■ WebBasic
 
