--- a/day/day021.md
+++ b/day/day021.md
@@ -79,13 +79,19 @@ class A{
 
 1) 리턴값 없음
 2) 클래스명과 동일
-3) 디폴트생성자를 생성해야하는 경우 : 오버로딩, 상속
+3) 디폴트(기본)생성자를 생성해야하는 경우 : 오버로딩, 상속
 
 4. 초기화 순서
 기본값    명시적초기화    초기화블록     생성자
 
 # ■ WebBasic
-
+repeat022.html
+0. 스크립트가 document어느위치에서든지 동작 가능하게
+1. 아이디가 addEventEx인것을 getElementById 이용해 선택
+2. 클릭시 prompt이용해서 당신이 좋아하는 1~5사이의 숫자 물어보고
+3. alert이용해서 알림창 띄우기
+<input type="button" value="addEventExx-1~5 Like"
+title = "버튼5" id="addEventEx" class="btn btn-success" />
 
 - Html BOOTSTRAP
 다른사람들이 만든 스타일을 가져와서 사용할수 있는 사이트, link, script를 사용하여 스타일 및, div 요소들을 가져온다.
