--- a/day/day024.md
+++ b/day/day024.md
@@ -22,7 +22,25 @@
 4. spring boot + thymeleaf + jpa + mybatis + react  
 5. flutter + spring boot + jpa + mybatis + react
 
+step1. 1. 팀깃허브(git)
+step2. 2. 팀원 - 브랜치
+step3. 3. mission002_자격증.md
+    같이 할 친구들~! 준비
 
+## Track001 - github
+>1. 자바 part002 - OOP
+>2. WEB BASIC - 자기소개페이지 (목)
+>3. 이력서 (전공자-100개 1개, 비전공자 200개 1개)
+[필수] SQLD - join, subquery
+[선택] 네트워크관리사 2급(중하), 리눅스마스터 2급(중상), 정보처리 기능사
+■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■
+■09.29 / 11.04 / 10.13 일정 확인
+■3. 네트워크 관리사 2급 (중하)
+>>>>>>>> ~2025.09.29(필기 접수) :  11월 2일 시험 / 11월 4일 발표
+>>>>>>>> ~2025.11.04(실기 접수) :  11월 30일 시험 / 12월 9일 발표
+■4. SQLD 시험 (중)
+>>>>>>>> ~2025.10.13(필기 접수) :  11월 15일 시험 / 12월 12일 발표
+■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■
 
 
 
