--- a/day/day026-1.md
+++ b/day/day026-1.md
@@ -390,6 +390,7 @@ public class PolyEx003 {
 		tb         = (TestB4) ta;   
 		//Q8. tb         = (TestB4) ta;   에서 tb가 사용할수 있는 범위는?  A: {b=20 / @toString} - {a=10 / ---------} 
 		//Q9. 컴피일러시  tb         = (TestB4) ta;  오류가 안나는 이유는?
+      //원래는 자식=부모 상황은 담을수가 없지만 형변환을 통해 자료형을 맞춰주었기 때문에 / 자식생성자를 호출해서
 		// A : tb{b=20 / @toString} - {a=10 / ---------} = 3000번지 {b=20 / [ @toString} - {a=10 ] / ---------} 
 		
 		System.out.println(tb);  //Q10. 출력내용과 그이유는?   TestB4
