--- a/day/day029.md
+++ b/day/day029.md
@@ -37,8 +37,8 @@ Bank_Main → BankController <의존관계>
 BankController ← Login, Add, Deposit, Widthdraw, Delete <실체화관계>
 
 <<interface>> BankControlle
-...△ ...△   ...△     ...△      ...△
-Login, Add, Deposit, Widthdraw, Delete
+...△ ...△   ...△     ...△      ...△    ...△
+Login, Add, Deposit, Widthdraw, Delete   Show
 
 
 Bank_Main → UserInfo <연관관계> 실선화살표 - 멤버변수로 포함
