--- a/day/day032.md
+++ b/day/day032.md
@@ -21,6 +21,14 @@ Q2. 팀원 - [깃허브] text2.md 수정
     - git pull 이 아니라 get fetch 데이터 가져오기
 
 
+##### ■4. restore vs checkout
+- restore : 파일을 예전상태로 되돌리는 기능 (최근상태로 되돌리기), commit 안했을때 사용가능
+- checkout : 브랜치 바꾸거나 파일 되돌리기
 
 
+```bash
+git restore 파일명 # 마지막으로 저장한상태로 돌아감.
+git restore --source=HEAD~1 파일명 #HEAD~1 1단계 , HEAD~2 2단계 
+```
+Q1. day034.md - restore
 ...................................
