--- a/day/day032.md
+++ b/day/day032.md
@@ -30,5 +30,11 @@ Q2. 팀원 - [깃허브] text2.md 수정
 git restore 파일명 # 마지막으로 저장한상태로 돌아감.
 git restore --source=HEAD~1 파일명 #HEAD~1 1단계 , HEAD~2 2단계 
 ```
-Q1. day034.md - restore
+Q1. day034.md - restore 2번 commit 하고 1번째 시점으로 돌아가기
+first - commit
+second - commit
+
+첫번째 수정
+
+
 ...................................
