--- a/day/day032.md
+++ b/day/day032.md
@@ -34,7 +34,7 @@ Q1. day034.md - restore 2번 commit 하고 1번째 시점으로 돌아가기
 first - commit  
 second - commit
 
-첫번째 수정
+첫번째 수정1
 
 
 ...................................
