--- a/day/day037.md
+++ b/day/day037.md
@@ -667,8 +667,22 @@ ORDER BY DEPTNO, SAL;
 -- 부서번호(DEPTNO) , 평균급여(AVG_SAL) , 최고급여(MAX_SAL) , 최저급여(MIN_SAL) , 사원수(CNT) 를 조회하시오
 -- 평균급여를 출력시 소수점을 제외하고 각 부서번호별로 출력하시오.
 
+내일 복습문제 ( 2025.10.23)
 
-문제 25~39
+-- EMP, DEPT 테이블을 이용하여
+-- EMP 테이블의 DETPNO 와 DEPT테이블의 DEPTNO가 같은 값을 출력하는 모든 값을 출력하시오.
+ 
+```
+ select *
+from   emp e, dept  d
+where  e.deptno = d.deptno;   -- 14 * 4 = 56
 
-다음주 문제 EX
+select *
+from   emp e  JOIN dept  d   on( e.deptno = d.deptno); 
+
+select *
+from   emp e  JOIN dept  d   using( deptno ); 
+
+select *
+from   emp  e  natural join dept d;
 
